# oram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
applications/balance-checker/: Makefile  README.txt  algo_runner.sh  client  client.cpp  client.js  common.hpp  httplib.h  initDB.sh  init_db_balance  init_db_balance.cpp  integration_test.py  mock_server_runner.sh  rcc_balance.txt  retrieveTransfers.py  retrieveTransfersState.json  update_balance.py
applications/balance-checker/App/: App.cpp  App.h
applications/balance-checker/App/TrustedLibrary/: Libcxx.cpp  async_https_server.hpp  attest.hpp  db_updater.hpp  file_utils.hpp  kvDB.hpp  kv_db.hpp  lock_utils.hpp
applications/balance-checker/Enclave/: Enclave.config.xml  Enclave.edl  Enclave.h
applications/balance-checker/Enclave/TrustedLibrary/: crypt.hpp  omap.cpp  omap.edl
applications/cexample/: README.txt
applications/cexample/src/: CMakeLists.txt  test.c
applications/goexample/: .gitignore  README.txt  go.mod  makestaticbearssl.sh
applications/goexample/odsl/: CMakeLists.txt  gen_binding.sh  odsl.go  odsl.i  odsl_test.go
applications/goexample/odsl/cmake/: bearssl.cmake  boost.cmake
applications/gosimple/src/: go.mod
applications/gosimple/src/simplelib/: CMakeLists.txt  lib.go  main.go  simplelib.i
applications/gosimple/src/simplelib/include/: simpleclass.h
applications/gosimple/src/simplelib/src/: simpleclass.cpp
applications/omap/: Makefile  README.txt  algo_runner.sh  omapPerf.txt  omapPerf200g.txt
applications/omap/App/: App.cpp  App.h
applications/omap/App/TrustedLibrary/: Libcxx.cpp
applications/omap/Enclave/: Enclave.config.xml  Enclave.edl  Enclave.h  Enclave.lds
applications/omap/Enclave/TrustedLibrary/: omap.edl  omap_test.cpp
applications/omap/perf_tests/: plotLatency.py  plotPerf.py
applications/omap/perf_tests/erc20DeferWrite/: omapPerf200g.txt
applications/omap/perf_tests/erc20DeferWriteParBitonic/: omapPerf200g.txt
applications/omap/perf_tests/erc20FromEmpty/: omapPerf200g.txt
applications/omap/perf_tests/erc20FromExist/: omapPerf200g.txt
applications/omap/perf_tests/erc20SingleThread/: omapPerf200g.txt
applications/omap/perf_tests/parcuckoo/: omapPerf200g.txt
applications/omap/perf_tests/signalFromEmpty/: omapPerf200g.txt
applications/rustexample/: Cargo.toml  README.txt  build.rs  wrapper.h
applications/rustexample/src/: lib.rs
applications/sorting/: Makefile  algo_runner.sh
applications/sorting/App/TrustedLibrary/: Libcxx.cpp
applications/sorting/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h
applications/sorting/Enclave/TrustedLibrary/: sort_test.cpp  sorting.edl
cmake/: buildtype.cmake  clangformat.cmake  colors.cmake  cppcheck.cmake  faster.cmake  searchfiles.cmake
omap/: CMakeLists.txt
omap/algorithm/: bitonic.hpp  edge_rec.hpp  element.hpp  merge_split.hpp  or_compact_shuffle.hpp  param_select.hpp  static_sort.hpp
omap/common/: cmp_intrinsics.hpp  cpp_extended.hpp  defs.hpp  dmcache.hpp  encrypted.hpp  encutils.cpp  encutils.hpp  lock_util.hpp  lrucache.hpp  mov_intrinsics.hpp  utils.hpp
omap/common/tracing/: perf.hpp  perf_counters.hpp  perf_counters.hxx  perf_counters_release.hxx  tracer.hpp
omap/common/tracing/trackers/: profiler.hpp  time_tracker.hpp
omap/external_memory/: cachefrontvector.hpp  extemvector.hpp  rw_concepts.hpp  stdvector.hpp  virtualvector.hpp
omap/external_memory/algorithm/: bitonic.hpp  edge_rec.hpp  element.hpp  merge_split.hpp  or_compact_shuffle.hpp  param_select.hpp  sort_building_blocks.hpp  sort_def.hpp  static_sort.hpp
omap/external_memory/server/: cached.hpp  enclaveFileServer_untrusted.hpp  enclaveMemServer_untrusted.hpp  enclaveMmapFileServer_untrusted.hpp  serverBackend.cpp  serverBackend.hpp  serverFrontend.hpp
omap/interface/: common_impl.hpp  common_interface.hpp  interface.cpp  omap_8B_impl.hpp  omap_8B_interface.hpp  omap_c.cpp  omap_c.h  omap_declare.cfg  omap_generic_impl.hpp  omap_generic_interface.hpp  omap_impl.hpp  omap_interface.hpp  omap_spec_impl.hpp  omap_spec_interface.hpp  par_omap_impl.hpp  par_omap_interface.hpp  recoram_impl.hpp  recoram_interface.cpp  recoram_interface.hpp
omap/odsl/: adaptive_oram.hpp  block.hpp  bucket.hpp  circuit_oram.hpp  heap_tree.hpp  linear_oram.hpp  omap.hpp  omap_improved.hpp  omap_short_kv.hpp  oram_common.hpp  page_oram.hpp  par_omap.hpp  recursive_oram.hpp
omap/oram/: adaptive_oram.hpp  block.hpp  bucket.hpp  circuit_oram.hpp  cuckoo.hpp  heap_tree.hpp  linear_oram.hpp  omap.hpp  oram.hpp  oram_common.hpp  par_omap.hpp  recursive_oram.hpp
osort/: CMakeLists.txt
osort/common/: defs.hpp  dummy.hpp  encrypted.hpp  encutils.cpp  encutils.hpp  lock_util.hpp  mov_intrinsics.hpp  probability.hpp  utils.hpp
osort/common/tracing/: perf.hpp  perf_counters.hxx  tracer.cpp  tracer_events.hxx
osort/common/tracing/trackers/: max_tracker.hpp
osort/external_memory/: cachefrontvector.hpp  dynamicvector.hpp  extemvector.hpp  noncachedvector.hpp  stdvector.hpp  virtualvector.hpp
osort/external_memory/algorithm/: bitonic.hpp  ca_bucket_sort.hpp  edge_rec.hpp  kway_butterfly_sort.hpp  kway_distri_sort.hpp  or_compact_shuffle.hpp  param_select.hpp  randomized_shell_sort.hpp  sort_building_blocks.hpp  sort_def.hpp  waks_on_off.hpp
osort/external_memory/server/: batchFrontend.hpp  cached.hpp  enclaveFileServer_untrusted.hpp  enclaveMemServer_untrusted.hpp  enclaveMmapFileServer_untrusted.hpp  serverAllocator.hpp  serverBackend.hpp  serverFrontend.hpp  serverFrontend_dynamic.hpp
osort/interface/: recoram_interface.cpp  recoram_interface.hpp
osort/oram/: block.hpp  bucket.hpp  ca_tree.hpp  circuit_oram.hpp  cuckoo.hpp  heap_tree.hpp  heap_tree_sub.hpp  linear_oram.hpp  node.hpp  omap.hpp  oram.hpp  oram_common.hpp  par_heap_tree.hpp  par_omap.hpp  path_oram.hpp  recursive_oram.hpp  tree.hpp
tests/: CMakeLists.txt  basic.cpp  cuckoo.cpp  omap.cpp  oram.cpp  par_omap.cpp  perf_sort.cpp  sort.cpp  testutils.hpp
tools/docker/cppbuilder/: Dockerfile  rocksDBInstall.sh
tools/test-sgx/: test-sgx.sh
